[project]
name = "ptu_flim_tools"
version = "0.0.1"
authors = [
  { name="thopp-tudelft", email="t.r.hoppener@tudelft.nl" },
]
keywords = [
  "Fluorescence Lifetime Imaging Microscopy",
]
description = "Tools for reading, converting and analysing ptu flim data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies= [
]

[project.urls]
"Homepage" = "https://github.com/Brinkslab/ptu_flim_tools"
"Bug Tracker" = "https://github.com/Brinkslab/ptu_flim_tools/issues"
